<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_alto">

    <TextView
        android:id="@+id/textAboutMe"
        style="@style/TextViewBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dp_16"
        android:text="@string/text_about_me"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textVersion"
        style="@style/TextViewMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dp_16"
        android:text="@string/text_version"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textAboutMe" />

    <TextView
        android:id="@+id/textIntro"
        style="@style/TextViewMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_18"
        android:layout_marginVertical="@dimen/dp_10"
        android:gravity="center"
        android:text="@string/text_content_introduce"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textVersion" />

    <TextView
        android:id="@+id/textAuthor"
        style="@style/TextViewMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_author"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textIntro" />

    <TextView
        android:id="@+id/textContact"
        style="@style/TextViewMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dp_16"
        android:text="@string/text_contact"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textAuthor" />

    <TextView
        style="@style/TextViewBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_18"
        android:text="@string/text_email"
        android:textColor="@color/color_mountain_meadow"
        android:textSize="@dimen/sp_16"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textContact" />
</androidx.constraintlayout.widget.ConstraintLayout>
