<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.setting.SettingFragment">

    <View
        android:id="@+id/viewToolbar"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        android:background="@color/color_mountain_meadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTitle"
        style="@style/TextTitleToolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/sp_30"
        app:layout_constraintBottom_toBottomOf="@+id/viewToolbar"
        app:layout_constraintEnd_toEndOf="@+id/viewToolbar"
        app:layout_constraintStart_toStartOf="@+id/viewToolbar"
        app:layout_constraintTop_toTopOf="@+id/viewToolbar" />

    <ImageButton
        android:id="@+id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_8"
        android:background="?android:selectableItemBackground"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@null"
        android:src="@drawable/ic_search"
        app:layout_constraintBottom_toBottomOf="@+id/viewToolbar"
        app:layout_constraintEnd_toEndOf="@+id/viewToolbar"
        app:layout_constraintTop_toTopOf="@+id/textTitle" />

    <TextView
        style="@style/TextViewBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:text="@string/text_notification"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewToolbar" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchNotification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewToolbar" />

    <TextView
        android:id="@+id/textAboutMe"
        style="@style/TextViewBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:text="@string/text_about_me"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchNotification" />

</androidx.constraintlayout.widget.ConstraintLayout>
